kustomize-units/firewall/kyverno-capo/restart-kyverno-after-capo-crds.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: refresh-kyverno-crds-capo
  annotations:
    kustomize.toolkit.fluxcd.io/force: Enabled
    policies.kyverno.io/title: Refresh Kyverno CRDs for CAPO
    policies.kyverno.io/category: Other
    kyverno.io/kyverno-version: 1.12.0
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/subject: HelmReleases
    policies.kyverno.io/description: >-
      Trigger an restart of kyverno pods on CRD changes
      See https://gitlab.com/sylva-projects/sylva-core/-/issues/1899
spec:
  webhookConfiguration:
    failurePolicy: Ignore
  validationFailureAction: Enforce
  background: true
  rules:
  - name: refresh-kyverno-CRDs-capo
    match:
      any:
      - resources:
          kinds:
          - apiextensions.k8s.io/*/CustomResourceDefinition
          names:
          - openstackmachines.infrastructure.cluster.x-k8s.io
    mutate:
      mutateExistingOnPolicyUpdate: true
      targets:
      - apiVersion: helm.toolkit.fluxcd.io/v2
        kind: HelmRelease
        name: kyverno
        namespace: sylva-system
      patchStrategicMerge:
        spec:
          values:
            admissionController:
              podAnnotations:
                capo-crds-installed: "True"
            backgroundController:
              podAnnotations:
                capo-crds-installed: "True"
